# rust_learn

./: Cargo.toml
embed/: Cargo.toml
embed/src/: main.rs
labs/03-Async/: ThumbnailServer.md
session1/__hello_world/src/: main.rs
session1/authentication/src/: lib.rs
session1/login/src/: main.rs
session1/login_manager/src/: main.rs  users.json
session1/variables/src/: main.rs
session2/atomics/src/: main.rs
session2/channels/src/: main.rs
session2/dashing/src/: main.rs
session2/deadlock/src/: main.rs
session2/hello_1/src/: main.rs
session2/mutexes/src/: main.rs
session2/parking/src/: main.rs
session2/rayon_example/: Cargo.toml
session2/rayon_example/src/: main.rs
session2/rayon_scope/: Cargo.toml
session2/rayon_scope/src/: main.rs
session2/rwLock/: Cargo.toml
session2/rwLock/src/: main.rs
session2/scoped_threads/src/: main.rs
session2/send_funcs_threads/: Cargo.toml
session2/send_funcs_threads/src/: main.rs
session2/thread_builder/src/: main.rs
session2/thread_priority_example/: Cargo.toml
session2/thread_priority_example/src/: main.rs
session2/workload_divide/: Cargo.toml
session2/workload_divide/src/: main.rs
session2/workqueue/: Cargo.toml
session2/workqueue/src/: main.rs
session3/async_channels/: Cargo.toml
session3/async_channels/src/: main.rs
session3/database/: Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
session3/database/migrations/: 20240422133705_more_messages.sql
session3/database/src/: main.rs
session3/error_handling/: Cargo.toml
session3/error_handling/src/: main.rs
session3/fileio/src/: main.rs
session3/hello_async/src/: main.rs
session3/hello_axum/: Cargo.toml
session3/hello_axum/src/: main.rs
session3/hello_tokio/: Cargo.toml
session3/hello_tokio/src/: main.rs
session3/hello_tokio_more/: Cargo.toml
session3/hello_tokio_more/src/: main.rs
session3/logspan/: Cargo.toml
session3/logspan/src/: main.rs
session3/networkio/: Cargo.toml
session3/networkio/src/: main.rs
session3/thumbnail_server/: images.db  images.db-shm  images.db-wal
session3/tokio_blocking/: Cargo.toml
session3/tokio_unittest/: Cargo.toml
try/embed/: Cargo.toml
try/embed/src/: main.rs
utils/old_files_deletion/: Cargo.toml
utils/serde_example/: Cargo.toml
(+6 files in other folders)
