[package]
name = "embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
axum = "0.7.5"
axum_static = "1.2.3"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.37.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "full"] }
trace = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
