[package]
name = "embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
axum-embed = "0.1.0"
clap = { version = "4.5.4", features = ["derive"] }
rust-embed = "8.3.0"
tokio = { version = "1.37.0", features = ["net", "full"] }
